Wed Apr 12 18:48:33 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (path_conv::path_conv): Ensure that suffix is correctly
	copied to path when we've found a symlink but aren't following
	symlinks.

Sat Apr  8 00:46:14 2000  Christopher Faylor <cgf@cygnus.com>

	* fhandler.cc (fhandler_disk_file::fstat): Allocate enough space for
	root dir determination or overflow an array.

Sat Apr  8 00:08:53 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (sigsave): Copy on fork so that we can restore correct
	behavior in forked process.
	(interruptible): Flag as interruptible when running in main process
	module.
	(interrupt_setup): Save return address and address of return address.
	(signal_fixup_after_fork): New function.  Uses above two values to
	restore proper behavior to forked process.
	(interrupt_on_return): Pass return address address to interupt_setup.
	(interrupt_now): Pass NULL for return address address to
	interrupt_setup.
	* fork.cc (fork): Call signal_fixup_after_fork.
	* shared.h: Lint cleanups.
	* winsup.h: Ditto.

Mon Apr  3 14:10:44 2000  Christopher Faylor <cgf@cygnus.com>

	* fhandler.h (select_stuff): Eliminate use of 'total'.
	* select.cc (cygwin_select): Ditto.
	(select_stuff::wait): Use maximum size for w4 rather than calculating
	what will fit.

Mon Apr 03 13:58:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* grp.cc (parse_grp): Save empty array instead of
	NULL in gr_mem if no supplementary group is given.

Sun Apr 02 16:02:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* syscalls.cc (chown_worker): Use previous uid/gid if
	new uid/gid is -1.

Fry Mar 31 22:55:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* syscalls.cc (chown_worker): New static function with
	chown functionality.
	(chown): Call chown_worker with SYMLINK_FOLLOW.
	(fchown): New function. Call chown_worker with SYMLINK_FOLLOW.
	(lchown): New function. Call chown_worker with SYMLINK_IGNORE.
	* cygwin.din: Add symbols for fchown, lchown.
