@@ -1068,6 +1068,8 @@ acl
 _acl = acl
 facl
 _facl = facl
+lacl
+_lacl = lacl
 aclcheck
 _aclcheck = aclcheck
 aclsort
